--- a/productos-sv/src/main/resources/application.properties
+++ b/productos-sv/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.application.name=productos-sv
-
+server.port= 8085
 spring.datasource.url= jdbc:mysql://localhost:3306/producto_db?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
