--- a/pedidos-sv/pom.xml
+++ b/pedidos-sv/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.francodavyd</groupId>
 	<artifactId>notificaciones-sv</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>notificaciones-sv</name>
+	<name>pedidos-sv</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -42,8 +42,9 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>3.1.8</version>
+			<version>4.1.3</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
