Resolucion de errores del cliente feign

--- a/pedidos-sv/src/main/resources/application.properties
+++ b/pedidos-sv/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=notificaciones-sv
+spring.application.name=pedidos-sv
 server.port = 8090
 spring.datasource.url= jdbc:mysql://localhost:3306/pedido_db?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
