--- a/notificaciones-sv/src/main/resources/application.properties
+++ b/notificaciones-sv/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=notificaciones-sv
 server.port = 8100
 email.sender= ${email}
 email.password= ${password}
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
