--- a/pagos-sv/src/main/resources/application.properties
+++ b/pagos-sv/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url= jdbc:mysql://localhost:3306/pagos_db?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username= root
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
