--- a/pedidos-sv/src/main/resources/application.properties
+++ b/pedidos-sv/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url= jdbc:mysql://localhost:3306/pedido_db?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username= root
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
