--- a/productos-sv/src/main/resources/application.properties
+++ b/productos-sv/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url= jdbc:mysql://localhost:3306/producto_db?serverTimezone=UT
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username= root
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
