--- a/usuarios-sv/pom.xml
+++ b/usuarios-sv/pom.xml
@@ -45,7 +45,11 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.1.3</version>
+		</dependency>
 
 
 		<dependency>
