--- a/usuarios-sv/src/main/resources/application.properties
+++ b/usuarios-sv/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 security.jwt.private.key = ${PRIVATE_KEY}
 security.jwt.user.generator = ${GENERATOR}
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
