--- a/notificaciones-sv/src/main/resources/application.properties
+++ b/notificaciones-sv/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=notificaciones-sv
-server.port = 8100
+server.port=${PORT:${SERVER_PORT:0}}
 email.sender= ${email}
 email.password= ${password}
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
