--- a/pagos-sv/src/main/resources/application.properties
+++ b/pagos-sv/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=pagos-sv
-server.port =8095
+server.port=${PORT:${SERVER_PORT:0}}
+
+
 mercadopago.access.token=${accessToken}
 mercadopago.webhook.token=${hookToken}
 spring.datasource.url= jdbc:mysql://localhost:3306/pagos_db?serverTimezone=UTC
@@ -7,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username= root
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
