--- a/pedidos-sv/src/main/resources/application.properties
+++ b/pedidos-sv/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=pedidos-sv
-server.port = 8090
+server.port=${PORT:${SERVER_PORT:0}}
 spring.datasource.url= jdbc:mysql://localhost:3306/pedido_db?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username= root
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
