--- a/productos-sv/src/main/resources/application.properties
+++ b/productos-sv/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
 spring.application.name=productos-sv
-server.port= 8085
+server.port=${PORT:${SERVER_PORT:0}}
 spring.datasource.url= jdbc:mysql://localhost:3306/producto_db?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username= root
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
