--- a/usuarios-sv/src/main/resources/application.properties
+++ b/usuarios-sv/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=usuarios-sv
+server.port=${PORT:${SERVER_PORT:0}}
 spring.jpa.database-platform= org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/usersec_db?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
@@ -6,3 +7,4 @@ spring.datasource.username=root
 security.jwt.private.key = ${PRIVATE_KEY}
 security.jwt.user.generator = ${GENERATOR}
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
