--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -36,12 +36,13 @@
 			<artifactId>spring-cloud-starter-gateway-mvc</artifactId>
 		</dependency>
 
-		<!--
+
 		 <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			 <version>4.1.3</version>
 		</dependency>
--->
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
