--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=api-gateway
+server.port=8080
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+spring.cloud.gateway.routes[0].id=productos-sv
+spring.cloud.gateway.routes[0].uri=lb://productos-sv
+spring.cloud.gateway.routes[0].predicates[0]=Path=/product/**
+
+spring.cloud.gateway.routes[1].id=pagos-sv
+spring.cloud.gateway.routes[1].uri=lb://pagos-sv
+spring.cloud.gateway.routes[1].predicates[0]=Path=/pago/**
+
+spring.cloud.gateway.routes[2].id=pedidos-sv
+spring.cloud.gateway.routes[2].uri=lb://pedidos-sv
+spring.cloud.gateway.routes[2].predicates[0]=Path=/pedido/**
+
+spring.cloud.gateway.routes[3].id=usuarios-sv
+spring.cloud.gateway.routes[3].uri=lb://usuarios-sv
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/users/**
+
+spring.cloud.gateway.routes[4].id=notificaciones-sv
+spring.cloud.gateway.routes[4].uri=lb://notificaciones-sv
+spring.cloud.gateway.routes[4].predicates[0]=Path=/mail/**
