Configuracion de rutas en el gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/product/**
 
 spring.cloud.gateway.routes[1].id=pagos-sv
 spring.cloud.gateway.routes[1].uri=lb://pagos-sv
-spring.cloud.gateway.routes[1].predicates[0]=Path=/pago/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/pago/**,/webhook/**
 
 spring.cloud.gateway.routes[2].id=pedidos-sv
 spring.cloud.gateway.routes[2].uri=lb://pedidos-sv
@@ -19,8 +19,10 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/pedido/**
 
 spring.cloud.gateway.routes[3].id=usuarios-sv
 spring.cloud.gateway.routes[3].uri=lb://usuarios-sv
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/users/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/users/**,/auth/**,/permission/**,/role/**
 
 spring.cloud.gateway.routes[4].id=notificaciones-sv
 spring.cloud.gateway.routes[4].uri=lb://notificaciones-sv
 spring.cloud.gateway.routes[4].predicates[0]=Path=/mail/**
+
+
