Configuracion del gateway y seguridad en el microservicio productos

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -25,4 +25,8 @@ spring.cloud.gateway.routes[4].id=notificaciones-sv
 spring.cloud.gateway.routes[4].uri=lb://notificaciones-sv
 spring.cloud.gateway.routes[4].predicates[0]=Path=/mail/**
 
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.reactor.netty.http.server=DEBUG
+
 
