--- a/pedidos-sv/src/main/resources/application.properties
+++ b/pedidos-sv/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username= root
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+security.jwt.private.key = ${PRIVATE_KEY}
+security.jwt.user.generator = ${GENERATOR}
