--- a/pagos-sv/src/main/resources/application.properties
+++ b/pagos-sv/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.username= root
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+security.jwt.private.key = ${PRIVATE_KEY}
+security.jwt.user.generator = ${GENERATOR}
