Configuraciones de los circuit breakers en microservicio Pagos

--- a/pagos-sv/src/main/resources/application.properties
+++ b/pagos-sv/src/main/resources/application.properties
@@ -14,3 +14,19 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 security.jwt.private.key = ${PRIVATE_KEY}
 security.jwt.user.generator = ${GENERATOR}
+
+
+
+
+resilience4j.circuitbreaker.configs.shared.registerHealthIndicator=true
+resilience4j.circuitbreaker.configs.shared.slidingWindowSize=10
+resilience4j.circuitbreaker.configs.shared.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.configs.shared.slidingWindowType=TIME_BASED
+resilience4j.circuitbreaker.configs.shared.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.configs.shared.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.configs.shared.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.shared.eventConsumerBufferSize=10
+
+resilience4j.circuitbreaker.instances.pedidoCB.baseConfig=shared
+
+resilience4j.circuitbreaker.instances.productoCB.baseConfig=shared
