--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -42,7 +42,16 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			 <version>4.1.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>4.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>4.1.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
