--- a/pedidos-sv/pom.xml
+++ b/pedidos-sv/pom.xml
@@ -70,8 +70,16 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 			<version>3.3.4</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>4.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>4.1.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
