--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -10,9 +10,10 @@ spring:
           search-paths: config-data
           username: ${GIT_USER}
           password: ${GIT_PASS}
+          default-label: notifications
+  application:
+    name: config-server
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-  application:
-    name: config-server
